--- a/CLASE2/precalentando.html
+++ b/CLASE2/precalentando.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <script type="text/javascript" src="clase2practica.js"></script>
+    <script type="text/javascript" src="precalentando.js"></script>
 </body>
 
 </html>
