--- a/CLASE2/experimento.html
+++ b/CLASE2/experimento.html
@@ -9,7 +9,8 @@
 </head>
 
 <body>
-    <script type="text/javascript" src="clase2practica.js"></script>
+    <h1>“La magia sucede en la consola!”.<h1>
+    <script type="text/javascript" src="experimento.js"></script>
 </body>
 
 </html>
