--- a/CLASE2/clase2practica2.html
+++ b/CLASE2/clase2practica2.html
@@ -9,7 +9,8 @@
 </head>
 
 <body>
-    <script type="text/javascript" src="clase2practica.js"></script>
+    <h1>"Árbol genealógico"</h1>
+    <script type="text/javascript" src="clase2practica2.js"></script>
 </body>
 
 </html>
