--- a/CLASE2/clase2practica2.html
+++ b/CLASE2/clase2practica2.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <h1>"Árbol genealógico"</h1>
+    <h1>"Clase2 - Práctica 2"</h1>
     <script type="text/javascript" src="clase2practica2.js"></script>
 </body>
 
