--- a/CLASE6/ejercicios_clase_6(parte1)_ejercicio2 copy/index.html
+++ b/CLASE6/ejercicios_clase_6(parte1)_ejercicio2 copy/index.html
@@ -10,6 +10,8 @@
 </head>
 <body>
     <h1>Personajes de Rick and Morty</h1>
+    <a href="favorites.html">Favoritos</a>
+    
     <section class="characterList"></section>
 </body>
 </html>
